--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div id="gl-box">
-    <canvas id="gl-canvas" width="800" height="450"></canvas>
+    <canvas id="gl-canvas"></canvas>
   </div>
 
   <div id="controls">
